CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2021
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2021.March.3 (0.9.26)
  * New Features
    ------------
    * Larger UI buttons
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * It's now possible to increase how many rows of buttons are shown
      for the color palette at the bottom of the screen.
      (Use the "colorsrows" option.)
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Adding sub-tools to the Fill tool:
      + Solid -- The classic fill tool; click to fill 
      + Linear -- A linear gradient; click and drag to adjust,
        release mouse to finish
      + Radial -- A radial gradient; click to fill
      (The gradients transition from the current color to the
      background that's being filled.)

  * New Magic Tools:
    ----------------
    * Checkerboard
      Cover the entire canvas with a checkboard pattern using the
      current color.  Drag to change the size of the squares.

    * Clone
      Clones (copies, via painting) part of a drawing to another position.

    * Pixels
      Draws large squares, for classic computer 'pixel art' style drawings.

  * Documentation updates
    ---------------------
    * Documentation is now maintained in a separate source repository,
      'tuxpaint-docs', which allows for easier and more consisten
      translation of the documentation.  Pulling in initial version of
      these docs, which contain a variety of minor updates (and also a
      few which had previously only been available as plain TXT are now
      available as HTML).

      + French translation
        Jacques Chion <jacques.chion@orange.fr>

      + Galician
        Miguel Anxo Bouzada <mbouzada@gmail.com>

      + Japanese
        TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

    * Expanded the steps for making and posting releases.
